syntax = "proto3";

package calculator;

option go_package="github.com/smcbrmmm/grpc-go-course/calculator/proto";

message MaxRequest {
    int32 Number = 1;
}

message MaxResponse {
    int32 Result = 1;
}